kbdeploy/ocp4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  labels:
    app: demoapp
    release: latest
spec:
  type: NodePort
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: demoapp
    release: latest
