kbdeploy/ocp4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demoapp-route
  labels:
    app: demoapp
    release: latest
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  # FQDN name need to set in hosts file that can match with hyproxy load balancer
  - host: demoapp-igfdemo.apps.ocp4ignite.ca.dst.ibm.com
  #- host: mytest.com
    http:
     paths:
     - path: /demoapp
       backend:
         serviceName: demoapp
         servicePort: 9080
